--- a/src/Site/Site.csproj
+++ b/src/Site/Site.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../Client/Client.csproj" />
+    <ProjectReference Include="../Views/Views.csproj" />
   </ItemGroup>
 
 </Project>
