--- a/src/Views/Views.csproj
+++ b/src/Views/Views.csproj
@@ -7,4 +7,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
   </ItemGroup>
+
+  <Target Name="NpmBuild" BeforeTargets="Build">
+    <Exec Command="npm run build" WorkingDirectory="$(MSBuildProjectDirectory)/.." />
+  </Target>
 </Project>
