--- a/package.json
+++ b/package.json
@@ -8,25 +8,38 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src/Views/Client",
-    "format": "prettier --write \"src/Views/**/*.{ts,tsx,js,jsx,css,razor,html}\""
+    "format": "prettier --write \"src/Views/**/*.{ts,tsx,js,jsx,css,razor,html}\"",
+    "test": "npm run test:client && npm run test:dotnet",
+    "test:client": "vitest --run",
+    "test:client:ui": "vitest --ui --run",
+    "test:client:coverage": "vitest --coverage --run",
+    "test:client:watch": "vitest --watch",
+    "test:dotnet": "dotnet test",
+    "test:dotnet:watch": "dotnet watch --project test/SiteTests test"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^0.34.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.32",
     "prettier": "^3.0.0",
     "stylelint": "^16.0.0",
     "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.0",
-    "vite": "^7.3.0"
+    "vite": "^7.3.0",
+    "vitest": "^0.34.0"
   },
   "dependencies": {
     "react": "^18.2.0",
