--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/Dotnet.gitignore
 
+# AI prompts and context
+/agents/session/*
+!/agents/session/.gitkeep
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
