--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/Dotnet.gitignore
 
+# Editors
+.vscode/
+
 # AI prompts and context
 /agents/session/*
 !/agents/session/.gitkeep
