--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:watch": "vite build --watch",
     "preview": "vite preview",
     "lint": "eslint src/Views/Client",
     "format": "prettier --write \"src/Views/**/*.{ts,tsx,js,jsx,css,razor,html}\"",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
+    "@tailwindcss/vite": "^4.1.18",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.0",
@@ -36,7 +38,7 @@
     "prettier": "^3.0.0",
     "stylelint": "^16.0.0",
     "stylelint-config-standard": "^36.0.0",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.3.0",
     "vite": "^7.3.0",
     "vitest": "^0.34.0"
