--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^0.34.0",
     "autoprefixer": "^10.4.16",
+    "bootstrap-icons": "^1.13.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
